--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -171,7 +171,8 @@ fieldset {
 
 .card
 {
-  height: 290px;
+      height: 350px;
+
 }
 
 .card:hover .card-title p{
@@ -347,6 +348,13 @@ max-width: none;
 }
 
 .Video{margin-bottom:6rem;}
+
+@media only screen and (max-width: 1199px) {
+  .card{
+    height: 290px;
+  }
+}
+
 
 @media only screen and (max-width: 991px) {
   .card{
