--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -392,6 +392,28 @@ Width: 100%;
 }
 
 
+@media only screen and (max-width: 575px) {
+  .card-title p{
+  opacity: 1;
+  }
+
+}
+
+@media only screen and (max-width: 500px) {
+  .card{
+    height:400px;
+  }
+
+}
+
+@media only screen and (max-width: 411px) {
+  .card{
+    height:300px;
+  }
+
+}
+
+
 .clickable {
     cursor: pointer;
 }
